# codex-fleet

docs/: fleet-mcp-registration.md  fleet-status.md  fleet-telemetry-cases.md
docs/future/: 02-runtime.md  PROTOCOL.md
openspec/changes/agent-claude-cfui-dispatch-improvements-zzz-2026-05-1-2026-05-18-14-03/: proposal.md  tasks.md
openspec/changes/agent-claude-halve-worker-pool-heap-cap-idle-worker-e-2026-05-18-14-38/: notes.md
openspec/changes/agent-codex-design-c-port-action-sheet-overlay-2026-05-18-14-15/: proposal.md  tasks.md
rust/fleet-worker-header/: Cargo.toml  README.md
rust/fleet-worker-header/src/: lib.rs  main.rs  render.rs
rust/fleet-worker-header/tests/: snapshot.rs
rust/fleet-worker-header/tests/snapshots/: snapshot__snapshot_capped_120.snap  snapshot__snapshot_capped_60.snap  snapshot__snapshot_capped_80.snap  snapshot__snapshot_idle_120.snap  snapshot__snapshot_idle_60.snap  snapshot__snapshot_idle_80.snap  snapshot__snapshot_working_120.snap  snapshot__snapshot_working_60.snap  snapshot__snapshot_working_80.snap
scripts/codex-fleet/: accounts.example.yml  cap-budget-alerts.sh  cap-probe.sh  claim-release-supervisor.sh  claude-spawn.sh  claude-worker.sh  codex-first-launch-supervisor.sh  codex-fleet-2.sh  down.sh  fleet-status.sh  force-claim.sh  full-bringup.sh  overview-header.sh  plan-watcher.sh  pr-babysitter.sh  score-checkpoint.sh  show-fleet.sh  stall-watcher.sh  style-tabs.sh  wake-prompt-templater.sh  wake-prompt.template.md  worker-prompt.md
skills/codex-fleet/: SKILL.md
tests/scripts/: test-script-help.sh
(+106 files in other folders)
