[package]
name = "fleet-worker-header"
version = "0.0.1"
edition = "2021"
publish = false
description = "Per-pane iOS-style status header line for codex-fleet workers."

[[bin]]
name = "fleet-worker-header"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"
